--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!--     <head><link rel="stylesheet" href="main.css"></head> -->
+    <head><link rel="stylesheet" href="main.css"></head>
     <!-- <h1 style="color:red">Sử dụng CSS Inline</h1> -->
     <h1>Esccccccccccc</h1>
     <div>
