--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Band</title>
+    <title>W3.CSS Template</title>
     <link rel="shortcut icon" href=".\assets\img\BnSClient.ico">
     <link rel="stylesheet" href=".\assets\css\style.css">
 </head>
